# nobara-core-packages

./: README.md  create-tarballs.sh
nobara-automount/: Makefile  dependencies.txt
nobara-drivers-gtk4-old/: Cargo.toml  driver-db.json
nobara-drivers-gtk4-old/data/: generate_package_info.sh
nobara-drivers-gtk4-old/locales/: en_US.json
nobara-drivers-gtk4-old/src/: config.rs  style.css
nobara-drivers-gtk4-old/src/build_ui/: mod.rs
nobara-welcome-gtk4/: Cargo.toml  Makefile  builddeps-fedora.txt
nobara-welcome-gtk4/data/: com.github.nobaraproject.nobarawelcome.desktop  com.github.nobaraproject.nobarawelcome.gschema.xml  nobara-welcome-autostart.desktop
nobara-welcome-gtk4/data/config/: community.json  contribute.json  credits.json  look_and_feel.json  optional_steps.json  recommended_addons.json  setup_steps.json  translators.json  troubleshoot.json
nobara-welcome-gtk4/data/scripts/: .sh  codec-wizard.sh  driver-manager.sh  flatpak-beta-install.sh  flatpak-install.sh  nobara-resolve.sh  pkcon-install.sh  pkexec-resolve.sh  software-manager.sh  update-manager.sh  webapp-manager.sh
nobara-welcome-gtk4/data/scripts/resolve/: end.sh  install.sh  main.py  process.py
nobara-welcome-gtk4/data/scripts/steam/: steam-game-fixups.sh
nobara-welcome-gtk4/data/scripts/updater/: end.sh  main.py  nobara-sync.sh  process.py  process.ui
nobara-welcome-gtk4/locales/: de_DE.json  en_US.json
nobara-welcome-gtk4/src/: build_ui.rs  config.rs  main.rs
nobara-welcome-gtk4/src/save_window_size/: mod.rs
nobara-welcome-gtk4/src/welcome_content_page/: mod.rs
(+194 files in other folders)
