[package]
name = "nobara-drivers"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
async-channel = "2.2.0"
duct = "0.13.7"
os_pipe = "1.1.5"
rust-i18n = "3.0.1"
users = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
sys-locale = "=0.3.1"
